cargo-features = ["per-package-target"]

[package]
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/thread-groups"
name = "thread-groups"
description = "thread-groups is a tool that spawns several threads so you can wait for their completion and enjoy the silence of your life in the real world."
license = "MIT"
version = "0.1.0"
edition = "2024"
autobins = false
autoexamples = false
autobenches = false
default-target = "aarch64-apple-darwin"

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps", "-Zcustom_mir"]


[lib]
name = "thread_groups"
path = "thread_groups.rs"
